# mydiary

./: .gitignore  .pylintrc  CLAUDE.md  README.md  docker-compose.yaml  mcp_server.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
alembic/: env.py
backend/: .devcontainer.json  .dockerignore  Dockerfile  alembic.ini  api.json  poetry.lock.bak  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 041dd88e85f4_joplinnote_body_field_is_nullable.py  0807f083f83f_add_unique_constraint_joplin_note_title.py  0e296ec9b060_minor_tweaks.py  161692a924d8_remove_column_pocketarticle_excerpt.py  16e8adf5ddb8_add_fields_to_joplinnotebase.py  1d0994fb3e88_add_timezonechange_table.py  1d2fdcc3b6dc_add_words_table.py  1e4c09f9bc6e_fresh_start.py  392cf2aec96f_add_learned_dt_column_on_performsong.py  43f9baca4115_changes_to_performsong_fields.py  4bb955072777_add_updated_at_column_to_audio_features_.py  4e69b49f6a0d_add_field_to_tag.py  4f09dd377b15_add_diary_date_to_mydiaryimage.py  54bc67175129_add_original_image_hash_field_to_.py  56aae308c8b8_start_afresh.py  5bb601663558_add_performsong_table.py  72c1841ec029_add_created_at_column_to_performsongs_.py  76195e4bb3e1_add_lyrics_field_to_performsong.py  7711952fa8b6_add_spotify_audio_features_table.py  7b7e1a7b6a0e_changes_to_spotify_tables.py  8c914034989f_add_recipes_tables.py  972ada4bfca5_add_joplinnote_table.py  986f1649293c_remove_spotifycontext_table.py  a2ba3ac2978e_change_words_column_name_for_title.py  abae23bcb70a_add_column_to_dog_table.py  aea3d98b34a7_rename_audio_features_table.py  afdb51149db4_add_key_and_capo_columns_to_.py  c79067dc46b8_add_mydiaryimage_table.py  cc3ed16547a4_add_raindrop_io_fields_to_pocketarticle.py  cd57c3c10e94_add_spotifycontext_table.py  de39eddb61af_add_link_table_between_joplin_notes_and_.py  e943e3d13add_sqlite_db_backup_table.py  fe286885f86e_add_api_sync_timestamps_to_.py  ff8fd8da6b6a_separate_spotifytrack_and_.py
backend/alembic_old2/: env.py
backend/mydiary/: __init__.py  api.py  core.py  db.py  googlecalendar_connector.py  googlephotos_connector.py  habitica_connector.py  image_sync.py  joplin_connector.py  markdown_edits.py  models.py  mydiary_day.py  nextcloud_connector.py  pocket_connector.py  raindrop_connector.py  spotify_connector.py  thumbnail_cache.py
backend/scripts/: add_all_pocket_articles_from_api_to_db.py  add_existing_joplin_notes_to_db.py  backup_db.py  init_db.py  joplin_init_note.py  joplin_init_or_update_note.py  joplin_init_or_update_notes_date_range.py  joplin_shrink_images.py  joplin_update_note.py  spotify_save_recent_tracks_to_database.py
backend/tests/: conftest.py  pocketitemupdate.json  spotifyaudiofeatures.json  spotifytrack.json  test_api.py  test_core.py  test_database.py  test_googlecalendar.py  test_googlephotos.py  test_image_sync.py  test_joplin.py  test_markdown.py  test_mydiary_day.py  test_mydiaryday2.md  test_mydiaryday_20221102.md  test_nextcloud.py  test_pocket.py  test_spotify.py
backend/tests/mydiary_day_data/: gcal_events.json  pocket_articles.json  spotify_tracks.json
docs/: image-workflow.md
frontend/: .devcontainer.json  .eslintignore  Dockerfile  README.MD  orval.config.js  package.json
mydiary/: __init__.py  api.py  core.py  db.py  googlecalendar_connector.py  googlephotos_connector.py  joplin_connector.py  markdown_edits.py  models.py  pocket_connector.py  spotify_connector.py  spotify_history.py
mydiary-vuetify/: .devcontainer.json  .gitignore  Dockerfile  eslint.config.mjs  index.html  orval.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
nginx/: nginx.conf
nginx-vue/: nginx.conf
notebooks/: googlecalendar-auth-example.ipynb  (+2 more)
(+94 files in other folders)
