[tool.poetry]
name = "mydiary"
version = "0.1.0"
description = ""
authors = ["h1-the-swan <jason.portenoy@gmail.com>"]
packages = [
	{ include = "mydiary" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.9.2"
spotipy = "^2.22.1"
pocket = "^0.3.6"
google-api-python-client = "^2.146.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.0.0"
pendulum = "^3.0.0"
Pillow = "^11.0.0"
sqlmodel = "^0.0.22"
alembic = "^1.13.1"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
lxml = "^5.3.0"
pylint = "^3.3.0"
lyricsgenius = "^3.0.1"
apscheduler = "^3.10.4"

[tool.poetry.dev-dependencies]
humanfriendly = "^10.0"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.0"
jupyter = "^1.1.1"
black = "^24.4.2"
pytest = "8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
