[project]
name = "mydiary"
version = "0.1.0"
description = ""
authors = [
	{name = "h1-the-swan", email = "jason.portenoy@gmail.com"}
]
requires-python = "^3.10"
dependencies = [
	"python-dotenv (>=1.0.0,<2.0.0)",
	"pydantic (>=2.9.2,<3.0.0)",
	"spotipy (>=2.22.1,<3.0.0)",
	"pocket (>=0.3.6,<0.4.0)",
	"google-api-python-client (>=2.146.0,<3.0.0)",
	"google-auth-httplib2 (>=0.2.0,<0.3.0)",
	"google-auth-oauthlib (>=1.0.0,<2.0.0)",
	"pendulum (>=3.0.0,<4.0.0)",
	"Pillow (>=11.0.0,<12.0.0)",
	"sqlmodel (>=0.0.24,<0.0.25)",
	"alembic (>=1.14.1,<2.0.0)",
	"fastapi (>=0.115.0,<0.116.0)",
	"uvicorn[standard] (>=0.34.0,<0.35.0)",
	"lxml (>=5.3.0,<6.0.0)",
	"pylint (>=3.3.0,<4.0.0)",
	"lyricsgenius (>=3.0.1,<4.0.0)",
	"apscheduler (>=3.10.4,<4.0.0)",
	"backoff (>=2.2.1,<3.0.0)"
]

[tool.poetry]
packages = [
	{ include = "mydiary" },
]
exclude = ["**/database.db", "**/db_backup/*"]

[tool.poetry.group.dev.dependencies]
humanfriendly = "^10.0"
pytest-cov = "^6.0.0"
pylint = "^3.3.0"
jupyter = "^1.1.1"
black = "^25.1.0"
pytest = "8.3.5"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
