[project]
name = "mydiary"
version = "0.1.0"
description = ""
authors = [{ name = "h1-the-swan", email = "jason.portenoy@gmail.com" }]
requires-python = "^3.10"
dependencies = [
	"python-dotenv (>=1.0.0,<2.0.0)",
	"pydantic (>=2.9.2,<3.0.0)",
	"spotipy (>=2.22.1,<3.0.0)",
	"google-api-python-client (>=2.146.0,<3.0.0)",
	"google-auth-httplib2 (>=0.4.0,<0.5.0)",
	"google-auth-oauthlib (>=1.0.0,<2.0.0)",
	"pendulum (>=3.0.0,<4.0.0)",
	"Pillow (>=12.2.0,<13.0.0)",
	"sqlmodel (>=0.0.39,<0.0.40)",
	"alembic (>=1.14.1,<2.0.0)",
	"fastapi (>=0.139.2,<0.140.0)",
	"uvicorn[standard] (>=0.51.0,<0.52.0)",
	"lxml (>=6.1.0,<7.0.0)",
	"lyricsgenius (>=3.0.1,<4.0.0)",
	"apscheduler (>=3.10.4,<4.0.0)",
	"backoff (>=2.2.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "mydiary" }]
exclude = ["**/database.db", "**/db_backup/*"]

[tool.poetry.group.dev.dependencies]
humanfriendly = "^10.0"
pylint = "^4.0.6"
jupyter = "^1.1.1"
black = "^26.3.1"
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pip-audit = "^2.10.1"
playwright = "^1.61.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
